--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -23,8 +23,8 @@ jobs:
       - uses: coderabbitai/ai-pr-reviewer@1.13.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: 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
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         with:
-          debug: true
+          debug: false
           review_simple_changes: false
           review_comment_lgtm: false
